--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js-quiz-app.github.io",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/js-quiz-app/js-quiz-app.github.io/issues"
   },
-  "homepage": "https://github.com/js-quiz-app/js-quiz-app.github.io#readme"
+  "homepage": "https://github.com/js-quiz-app/js-quiz-app.github.io#readme",
+  "dependencies": {
+    "lit-html": "2.3.1",
+    "page": "1.11.6"
+  }
 }
