--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "js-quiz-app.github.io",
+  "name": "quiz",
   "version": "1.0.0",
-  "description": "",
+  "description": "Система за създадване, управление, и попълване на тестове със свободен достъп.",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "lite-server"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/js-quiz-app/js-quiz-app.github.io.git"
+    "url": "git+https://github.com/quiz-fever/quiz-fever.github.io.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/js-quiz-app/js-quiz-app.github.io/issues"
+    "url": "https://github.com/quiz-fever/quiz-fever.github.io/issues"
   },
-  "homepage": "https://github.com/js-quiz-app/js-quiz-app.github.io#readme",
+  "homepage": "https://github.com/quiz-fever/quiz-fever.github.io#readme",
   "dependencies": {
-    "lit-html": "2.3.1",
+    "lit-html": "1.3.0",
     "page": "1.11.6"
   }
 }
