--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/quiz-fever/quiz-fever.github.io.git"
+    "url": ""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/quiz-fever/quiz-fever.github.io/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/quiz-fever/quiz-fever.github.io#readme",
+  "homepage": "",
   "dependencies": {
     "lit-html": "1.3.0",
     "page": "1.11.6"
