--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "page": "1.11.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "babel-loader": "^9.1.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
