--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lit-html",
+    "start": "lite-server",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "",
   "dependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "lit-html": "1.3.0",
     "page": "1.11.6"
   },
